Fix styles - Prevent long URL's from overflowing out of the table

--- a/app/stylesheets/_grid.css
+++ b/app/stylesheets/_grid.css
@@ -32,8 +32,8 @@ header .grid-container {
 }
 .full-url{
   grid-row: 3;
-  grid-row-end: 3;
+  grid-column: 1/3;
 }
 .urlText{
-  max-width: 300px;
+  word-break: break-all;
 }
